Fixed additional features spacing on results page.

--- a/app/scss/brands/maytag/_results.scss
+++ b/app/scss/brands/maytag/_results.scss
@@ -241,6 +241,10 @@
 				padding-top: 10px;
 			}
 
+			.sales-feature-wrapper {
+				padding-top: 10px;
+			}
+
 			h4.sales-feature {
 				position: relative;
 				overflow: visible; // show all of icon even outside boundaries
@@ -266,7 +270,7 @@
 				}
 			}
 			h4.sales-feature {
-			  margin: 20px 0;
+			  margin: 23px 0 10px 0;
 			}
 		}
 		.product-img-wrap {
